# n-autoresearch

./: .gitignore  README.md  iii-config.yaml  package-lock.json  package.json  prepare.py  program.md  pyproject.toml  test-state.mjs  train.py
docs/plans/: 2026-03-11-n-autoresearch-design.md
workers/gpu/: Cargo.toml
workers/gpu/src/: config.rs  main.rs  state.rs
workers/gpu/src/functions/: mod.rs  train.rs
workers/gpu/src/triggers/: mod.rs
workers/orchestrator/: orchestrator.py  package.json
workers/orchestrator-py/: orchestrator.py
workers/orchestrator/src/: config.ts  index.ts
workers/orchestrator/src/functions/: experiment.ts  pool.ts  report.ts  search.ts
workers/orchestrator/src/state/: kv.ts  schema.ts
workers/orchestrator/src/triggers/: api.ts  cron.ts  events.ts
