[package]
name = "n-autoresearch-gpu"
version = "0.1.0"
edition = "2024"
description = "GPU training worker for n-autoresearch"
license = "MIT"

[dependencies]
iii-sdk = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
